--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "script.js",
-    "scripts": {
+  "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -- exec babel-node src/server.js"
+    "start": "nodemon --exec babel-node src/server.js"
   },
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
     "@babel/cli": "^7.21.5",
     "@babel/core": "^7.21.8",
@@ -19,6 +18,9 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "4.18.2",
-    "nodemon": "^2.0.22"
+    "mysql2": "^3.3.1",
+    "nodemon": "^2.0.22",
+    "sequelize": "^6.31.1",
+    "sequelize-cli": "^6.6.0"
   }
 }
