--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@babel/core": "^7.21.8",
     "@babel/node": "^7.20.7",
     "@babel/preset-env": "^7.21.5",
+    "app-root-path": "^3.1.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.1",
     "nodemon": "^2.0.22",
     "sequelize": "^6.31.1",
